samples/_failures_safe/1761260959_266a17_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1faf06d2.c: In function ‘process_tokens’:
./samples/SAFE/__tmp_1faf06d2.c:151:9: error: expected expression at end of input
  151 |         if (token.type >= 0 && token.type < 5 && handlers[token.type] !=
      |         ^~
./samples/SAFE/__tmp_1faf06d2.c:151:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1faf06d2.c:151:9: error: expected declaration or statement at end of input
